[package]
name = "block-utils"
version = "0.10.1"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "Utilities to work with block devices.  Formatting, getting device info, identifying type of device, etc."
edition = '2018'

# These URLs point to more information about the repository.
documentation = "https://docs.rs/block-utils"
homepage = "https://github.com/cholcombe973/block-utils"
repository = "https://github.com/cholcombe973/block-utils"
readme = "README.md"
license = "MIT"

[dev-dependencies]
nix = "~0.11"
tempdir = "~0.3"

[dependencies]
fstab = "~0.3"
log = "~0.4"
nom = "~5.1.1"
regex = "~1.4"
shellscript = "~0.3"
serde_json = "~1.0"
uuid = "~0.8"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "~0.5"
